--- a/.coveragerc
+++ b/.coveragerc
@@ -1,14 +1,14 @@
 # .coveragerc
 [run]
-source = TradeTide
+source = PackLab
 branch = True
 relative_files = True
 parallel = True
 omit =
     **/__init__.py
-    TradeTide/_version.py
-    TradeTide/directories.py
-    TradeTide/**/__main__.py
+    **/_version.py
+    **/directories.py
+    **/__main__.py
 
 [report]
 skip_covered = True
