--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
-cmake_minimum_required(VERSION 3.31)
+cmake_minimum_required(VERSION 3.20)
 set(CMAKE_OSX_DEPLOYMENT_TARGET "15.0" CACHE STRING "Minimum OS X deployment version")
-project(PackLab CXX)
+project(PackLab LANGUAGES CXX)
 
 # CMake settings
 set(CMAKE_VERBOSE_MAKEFILE ON)
@@ -9,14 +9,14 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Type of build")
 
-
 # Set the output directory for libraries
 set(LOCAL_CXX_DIR "${PROJECT_NAME}/cpp")
 set(LOCAL_BIN_DIR "${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/binary")
 
-# Compiler and linker options
-add_compile_options(-fPIC -Wall -Wextra -Wno-uninitialized)
+# Include directories
+include_directories("${LOCAL_CXX_DIR}")
 
+# Find dependencies
 if(APPLE AND CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
     set(OpenMP_CXX_FLAGS "-Xpreprocessor -fopenmp" CACHE STRING "")
     set(OpenMP_CXX_LIB_NAMES "omp" CACHE STRING "")
@@ -26,8 +26,6 @@ if(APPLE AND CMAKE_CXX_COMPILER_ID STREQUAL "AppleClang")
     endif()
 endif()
 
-
-# Find packages
 find_package(OpenMP REQUIRED)
 find_package(Python REQUIRED COMPONENTS Interpreter Development.Module)
 find_package(pybind11 CONFIG REQUIRED)
@@ -43,12 +41,49 @@ endif()
 # Compiler and linker options
 add_compile_options(-Wall -Wextra -pedantic-errors)
 
-# Print some messages
-message(STATUS "OPENMP flags: ${OpenMP_CXX_FLAGS}")
-message(STATUS "PackLab version is: ${PYPACKER_VERSION}")
-message(STATUS "PackLab includes directory is: ${LOCAL_CXX_DIR}")
-message(STATUS "Python version to be compiled against: ${PYBIND11_PYTHON_VERSION}")
-message(STATUS "Binary will be installed in location: ${LOCAL_BIN_DIR}")
+
+
+message(STATUS "")
+message(STATUS "==================== Build configuration ====================")
+
+message(STATUS "Compiler information")
+message(STATUS "  C compiler           : ${CMAKE_C_COMPILER}")
+message(STATUS "  C compiler ID        : ${CMAKE_C_COMPILER_ID}")
+message(STATUS "  C compiler version   : ${CMAKE_C_COMPILER_VERSION}")
+
+message(STATUS "  CXX compiler         : ${CMAKE_CXX_COMPILER}")
+message(STATUS "  CXX compiler ID      : ${CMAKE_CXX_COMPILER_ID}")
+message(STATUS "  CXX compiler version : ${CMAKE_CXX_COMPILER_VERSION}")
+
+message(STATUS "  Fortran compiler     : ${CMAKE_Fortran_COMPILER}")
+message(STATUS "  Fortran ID           : ${CMAKE_Fortran_COMPILER_ID}")
+message(STATUS "  Fortran version      : ${CMAKE_Fortran_COMPILER_VERSION}")
+
+message(STATUS "")
+message(STATUS "OpenMP configuration")
+message(STATUS "  OpenMP flags         : ${OpenMP_CXX_FLAGS}")
+message(STATUS "  OpenMP detected      : ${OpenMP_FOUND}")
+message(STATUS "  OpenMP version       : ${OpenMP_CXX_VERSION}")
+
+message(STATUS "")
+message(STATUS "Python configuration")
+message(STATUS "  Python executable    : ${Python_EXECUTABLE}")
+message(STATUS "  Python version       : ${PYBIND11_PYTHON_VERSION}")
+message(STATUS "  Python include dir   : ${Python_INCLUDE_DIRS}")
+message(STATUS "  Python site packages : ${Python_SITELIB}")
+
+message(STATUS "")
+message(STATUS "PackLab integration")
+message(STATUS "  PackLab version     : ${PYMIESIM_VERSION}")
+message(STATUS "  PackLab include dir : ${LOCAL_CXX_DIR}")
+
+message(STATUS "")
+message(STATUS "Install destination")
+message(STATUS "  Binary output path   : ${LOCAL_BIN_DIR}")
+
+message(STATUS "==============================================================")
+message(STATUS "")
+
 
 add_subdirectory(PackLab/cpp/utils)             # utils
 add_subdirectory(PackLab/cpp/result)            # result
