--- a/PackLab/cpp/utils/CMakeLists.txt
+++ b/PackLab/cpp/utils/CMakeLists.txt
@@ -5,9 +5,4 @@ set(NAME "utils")
 # Create a shared library for functionality.
 add_library("${NAME}" STATIC "${NAME}.cpp")
 
-install(
-    TARGETS ${NAME}
-    LIBRARY DESTINATION ${LOCAL_BIN_DIR}
-    ARCHIVE DESTINATION ${LOCAL_BIN_DIR}
-    RUNTIME DESTINATION ${LOCAL_BIN_DIR}
-)
+set_property(GLOBAL APPEND PROPERTY PACKLAB_TARGETS "${NAME}")
