--- a/meta.yaml
+++ b/meta.yaml
@@ -7,8 +7,10 @@ source:
   git_url: https://github.com/MartinPdeS/PackLab.git
 
 build:
-  script: "{{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation"
   number: 0
+  script:
+    - export CXXFLAGS="${CXXFLAGS} -D_LIBCPP_DISABLE_AVAILABILITY"  # [osx]
+    - {{ PYTHON }} -m pip install . -vv --no-deps --no-build-isolation
 
 channels:
   - conda-forge
@@ -20,6 +22,7 @@ requirements:
     - llvm-openmp  # [osx]
   host:
     - python {{ PY_VER }}*
+    - python_abi 3.13.* *_cp313   # [py==313]
     - scikit-build-core ~=0.3
     - pybind11 ~=2.13
     - python-build ~=1.2
