--- a/meta.yaml
+++ b/meta.yaml
@@ -35,6 +35,7 @@ requirements:
     - matplotlib >=3.9,<4
     - numpy >=2.0,<3
     - pydantic >=2.8,<3
+    - tabulate
 
 about:
   home: https://github.com/MartinPdeS/PackLab
