--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,8 @@ dependencies = [
     "pydantic>=2.6.3",
     "MPSPlots",
     "numpy",
-    "TypedUnit"
+    "TypedUnit",
+    "tabulate",
 ]
 
 [project.urls]
